--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -135,7 +135,7 @@ choc_sample_1
 ```
 Here we see that the proportion of chocolate Timbits in this random sample is
 `r round(choc_sample_1$prop,2)`. This value is our estimate - our best guess of our population parameter using this sample. Given that it is a single
-value that is used to estimate a population parameter, we refer to it as a **point estimate**.
+value that we are estimating, we often refer to it as a **point estimate**.
 
 Now imagine we took another random sample of 40 Timbits from the population. Do you
 think you would get the same proportion? Let's try sampling from the population
