--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -138,7 +138,7 @@ Here we see that the proportion of chocolate Timbits in this random sample is
 value that we are estimating, we often refer to it as a **point estimate**.
 
 Now imagine we took another random sample of 40 Timbits from the population. Do you
-think you would get the same proportion? Let's try sampling from the population
+think we would get the same proportion? Let's try sampling from the population
 again and see what happens. 
 
 ```{r 11-example-proportions4, echo = TRUE, message = FALSE, warning = FALSE}
