--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -127,6 +127,7 @@ What would happen if we were to buy a box of 40 randomly-selected Timbits and co
 of `rep_sample_n` are (1) the data frame (or tibble) to sample from, and (2) the size of the sample to take.
 
 ```{r 11-example-proportions3, echo = TRUE, message = FALSE, warning = FALSE}
+set.seed(1)
 samples_1 <- rep_sample_n(tbl = virtual_box, size = 40)
 choc_sample_1 <- summarize(samples_1, 
                            n = sum(flavour == "chocolate"),
