--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -157,7 +157,7 @@ different result. Statistics vary from sample to sample
 due to **sampling variability**. 
 
 But just how much should we expect the statistics of our random
-samples to vary? In order to understand this, we will simulate more samples
+samples to vary? In order to understand this, we will simulate taking more samples
 of size 40 from our population of Timbits, and calculate the 
 proportion of chocolate Timbits in each sample. We can then
 construct the distribution of sample proportions we calculate. The distribution
