--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -160,7 +160,7 @@ But just how much should we expect the statistics of our random
 samples to vary? In order to understand this, we will simulate taking more samples
 of size 40 from our population of Timbits, and calculate the 
 proportion of chocolate Timbits in each sample. We can then
-construct the distribution of sample proportions we calculate. The distribution
+visualize the distribution of sample proportions we calculate. The distribution
 of the statistic for all possible samples of size $n$ from a population is
 called a **sampling distribution**. The sampling distribution will help us see
 how much we would expect our sample proportions from this population to vary
