--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -161,12 +161,12 @@ samples to vary? In order to understand this, we will simulate taking more sampl
 of size 40 from our population of Timbits, and calculate the 
 proportion of chocolate Timbits in each sample. We can then
 visualize the distribution of sample proportions we calculate. The distribution
-of the statistic for all possible samples of size $n$ from a population is
+of the estimate for all possible samples of a given size (which we commonly refer to as $n$) from a population is
 called a **sampling distribution**. The sampling distribution will help us see
 how much we would expect our sample proportions from this population to vary
 for samples of size 40. Below we again use the `rep_sample_n` to take samples
 of size 40 from our population of Timbits, but we set the `reps` argument
-to specify the number of samples to take.
+to specify the number of samples to take, here 1000.
 
 ```{r 11-example-proportions5, echo = TRUE, message = FALSE, warning = FALSE}
 samples <- rep_sample_n(virtual_box, size = 40, reps = 1000)
