--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -174,7 +174,7 @@ head(samples)
 tail(samples)
 ```
 
-Notice the column `replicate` is indicating the replicate with which each
+Notice the column `replicate` is indicating the replicate, or sample, with which each
 Timbit belongs. Since we took 1000 samples of size 40, there are 1000 replicates.
 
 ```{r 11-example-proportions6, echo = TRUE, message = FALSE, warning = FALSE}
