--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -176,7 +176,7 @@ tail(samples)
 
 Notice the column `replicate` is indicating the replicate, or sample, with which each
 Timbit belongs. Since we took 1000 samples of size 40, there are 1000 replicates.
-
+Now that we have taken 1000 samples, to create a sampling distribution of sample proportions for samples of size 40, we need to calculate the proportion of chocolate Timbits for each sample, $\hat{p_\text{chocolate}}$:
 ```{r 11-example-proportions6, echo = TRUE, message = FALSE, warning = FALSE}
 sample_estimates <- samples %>% 
     group_by(replicate) %>% 
