--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -184,7 +184,7 @@ sample_estimates <- samples %>%
 head(sample_estimates)
 tail(sample_estimates)
 ```
-
+Now that we have calculated the proportion of chocolate Timbits for each sample, $\hat{p_\text{chocolate}}$, we can visualize the sampling distribution of sample proportions for samples of size 40:
 ```{r 11-example-proportions7, echo = TRUE, message = FALSE, warning = FALSE,fig.cap = "Sampling distribution of the sample proportion for sample size 40"}
 sampling_distribution <-  ggplot(sample_estimates, aes(x = sample_proportion)) +
     geom_histogram(fill="#0072B2", color="#e9ecef", binwidth = 0.05) +
