updated colors in histograms, bins, phat notation

--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -72,11 +72,11 @@ estimate of the proportion of students who own an iPhone in the entire populatio
 ![Figure 11.1: Population versus sample](img/population_vs_sample.svg){}
 </center>
 
-Note that proportions are not the *only* kind of population parameter we might be interested in. Suppose an undergraduate student studying at the University of British Columbia in Vancouver is looking for an apartment to rent. They need to create a budget, so they want to know something about studio apartment rental prices in Vancouver, BC. This student might use statistical inference to tackle the question:
+Note that proportions are not the *only* kind of population parameter we might be interested in. Suppose an undergraduate student studying at the University of British Columbia in Vancouver, BC is looking for an apartment to rent. They need to create a budget, so they want to know something about studio apartment rental prices in Vancouver, BC. This student might use statistical inference to tackle the question:
 
 *What is the average price-per-month of studio apartment rentals in Vancouver, Canada?*
 
-The population consists of all studio apartment rentals in Vancouver, and the population parameter is the *average price-per-month*. Here we used the average as a measure of center to describe the "typical value" of studio apartment rental prices. But even within this one example, we could also be interested in many other population parameters. For instance, we know that not every studio apartment in Vancouver will have the same price-per-month. So we might be interested in how much monthly prices vary. We'd then want to find a measure of the variability (or spread) of the rentals, such as the standard deviation or variance. We might be interested in the fraction of studio apartments that cost more than \$1000 per month, and the list goes on. The question we want to answer will help us determine the parameter we want to estimate. If we were somehow able to observe the whole population of studio apartment rental offerings in Vancouver, we could compute each of these numbers exactly; therefore, these are all population parameters. There are many kinds of observations and population parameters that you will run into in practice, but in this chapter, we will focus on two settings:
+The population consists of all studio apartment rentals in Vancouver, and the population parameter is the *average price-per-month*. Here we used the average as a measure of center to describe the "typical value" of studio apartment rental prices. But even within this one example, we could also be interested in many other population parameters. For instance, we know that not every studio apartment rental in Vancouver will have the same price-per-month. So we might be interested in how much monthly prices vary. We'd then want to find a measure of the spread (or variability) of the rentals, such as the standard deviation. We might be interested in the fraction of studio apartment rentals that cost more than \$1000 per month, and the list goes on. The question we want to answer will help us determine the parameter we want to estimate. If we were somehow able to observe the whole population of studio apartment rental offerings in Vancouver, we could compute each of these numbers exactly; therefore, these are all population parameters. There are many kinds of observations and population parameters that you will run into in practice, but in this chapter, we will focus on two settings:
 
 1. Using categorical observations to estimate the proportion of each category
 2. Using quantitative observations to estimate the average (or mean)
@@ -176,7 +176,7 @@ tail(samples)
 
 Notice the column `replicate` is indicating the replicate, or sample, with which each
 Timbit belongs. Since we took 1000 samples of size 40, there are 1000 replicates.
-Now that we have taken 1000 samples, to create a sampling distribution of sample proportions for samples of size 40, we need to calculate the proportion of chocolate Timbits for each sample, $\hat{p_\text{chocolate}}$:
+Now that we have taken 1000 samples, to create a sampling distribution of sample proportions for samples of size 40, we need to calculate the proportion of chocolate Timbits for each sample, $\hat{p}_\text{chocolate}$:
 ```{r 11-example-proportions6, echo = TRUE, message = FALSE, warning = FALSE}
 sample_estimates <- samples %>% 
     group_by(replicate) %>% 
@@ -184,10 +184,10 @@ sample_estimates <- samples %>%
 head(sample_estimates)
 tail(sample_estimates)
 ```
-Now that we have calculated the proportion of chocolate Timbits for each sample, $\hat{p_\text{chocolate}}$, we can visualize the sampling distribution of sample proportions for samples of size 40:
+Now that we have calculated the proportion of chocolate Timbits for each sample, $\hat{p}_\text{chocolate}$, we can visualize the sampling distribution of sample proportions for samples of size 40:
 ```{r 11-example-proportions7, echo = TRUE, message = FALSE, warning = FALSE,fig.cap = "Sampling distribution of the sample proportion for sample size 40"}
 sampling_distribution <-  ggplot(sample_estimates, aes(x = sample_proportion)) +
-    geom_histogram(fill="#0072B2", color="#e9ecef", binwidth = 0.05) +
+    geom_histogram(fill="dodgerblue3", color="white", bins = 12) +
     xlab("Sample proportions") 
 sampling_distribution
 ```
@@ -242,7 +242,7 @@ head(airbnb)
 We can visualize the population distribution of the price per night with a histogram. 
 ```{r 11-example-means2, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Population distribution of price per night ($) for all Airbnb listings in Vancouver, Canada"}
 population_distribution <-  ggplot(airbnb, aes(x = price)) +
-    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    geom_histogram(fill="dodgerblue3", color="white") +
     xlab("Price per night ($)") 
 population_distribution
 population_parameters <- airbnb %>% 
@@ -267,7 +267,7 @@ sample_1 <- airbnb %>%
     rep_sample_n(20)
 head(sample_1)
 sample_distribution <- ggplot(sample_1, aes(price)) + 
-    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    geom_histogram(fill="dodgerblue3", color="white") +
     xlab("Price per night ($)") 
 sample_distribution
 estimates <- sample_1 %>% 
@@ -298,7 +298,7 @@ sample_estimates <- samples %>%
 head(sample_estimates)
 
 sampling_distribution_20 <-  ggplot(sample_estimates, aes(x = sample_mean)) +
-    geom_histogram(fill="#0072B2", color="#e9ecef") + 
+    geom_histogram(fill="dodgerblue3", color="white") + 
     xlab("Sample mean price per night ($)") 
 sampling_distribution_20
 ```
@@ -351,19 +351,19 @@ sample_estimates_500 <- rep_sample_n(airbnb, size = 500, reps = 10000) %>%
 
 ## Sampling distribution n = 50 
 sampling_distribution_50 <-  ggplot(sample_estimates_50, aes(x = sample_mean)) +
-    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    geom_histogram(fill="dodgerblue3", color="white") +
     xlab("Sample mean price per night($)") +
     ggtitle("n = 50") + xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 
 ## Sampling distribution n = 100 
 sampling_distribution_100 <-  ggplot(sample_estimates_100, aes(x = sample_mean)) +
-    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    geom_histogram(fill="dodgerblue3", color="white") +
     xlab("Sample mean price per night ($)") +
     ggtitle("n = 100") + xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 
 ## Sampling distribution n = 500 
 sampling_distribution_500 <-  ggplot(sample_estimates_500, aes(x = sample_mean)) +
-    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    geom_histogram(fill="dodgerblue3", color="white") +
     xlab("Sample mean price per night ($)") +
     ggtitle("n = 500") + xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 
@@ -447,29 +447,29 @@ Here is the key idea. First, if you take a big enough sample, it *looks like* th
 sample_10 <- airbnb %>% 
     rep_sample_n(10)
 sample_distribution_10 <- ggplot(sample_10, aes(price)) + 
-    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    geom_histogram(fill="dodgerblue3", color="white") +
     xlab("Price per night ($)") + ggtitle("n = 10")
 
 sample_20 <- airbnb %>% 
     rep_sample_n(20)
 sample_distribution_20 <- ggplot(sample_20, aes(price)) + 
-    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    geom_histogram(fill="dodgerblue3", color="white") +
     xlab("Price per night ($)") + ggtitle("n = 20")
 sample_50 <- airbnb %>% 
     rep_sample_n(50)
 sample_distribution_50 <- ggplot(sample_50, aes(price)) + 
-    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    geom_histogram(fill="dodgerblue3", color="white") +
     xlab("Price per night ($)") + ggtitle("n = 50")
 sample_100 <- airbnb %>% 
     rep_sample_n(100)
 sample_distribution_100 <- ggplot(sample_100, aes(price)) + 
-    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    geom_histogram(fill="dodgerblue3", color="white") +
     xlab("Price per night ($)") + ggtitle("n = 100")
 
 sample_200 <- airbnb %>% 
     rep_sample_n(200)
 sample_distribution_200 <- ggplot(sample_200, aes(price)) + 
-    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    geom_histogram(fill="dodgerblue3", color="white") +
     xlab("Price per night ($)") + ggtitle("n = 200")
 
 grid.arrange(sample_distribution_10, 
@@ -520,7 +520,7 @@ one_sample <- airbnb %>%
     select(price) # drop the replicate column 
 head(one_sample)
 one_sample_dist <- ggplot(one_sample, aes(price)) + 
-    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    geom_histogram(fill="dodgerblue3", color="white") +
     xlab("Price per night ($)") 
 one_sample_dist
 ```
@@ -547,7 +547,7 @@ boot1 <- one_sample %>%
     rep_sample_n(size = 40, replace = TRUE, reps = 1)
 head(boot1)
 boot1_dist <- ggplot(boot1, aes(price)) + 
-    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    geom_histogram(fill="dodgerblue3", color="white") +
     xlab("Price per night ($)") 
 
 boot1_dist
@@ -587,7 +587,7 @@ might expect our point estimate to behave if we took another sample.
 
 ```{r 11-bootstrapping5, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means"}
 boot_est_dist <-  ggplot(boot1500_means, aes(x = mean)) +
-    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    geom_histogram(fill="dodgerblue3", color="white") +
     xlab("Sample mean price per night ($)") 
 ```
 
@@ -602,7 +602,7 @@ sample_estimates <- samples %>%
     summarise(sample_mean = mean(price))
 
 sampling_dist <-  ggplot(sample_estimates, aes(x = sample_mean)) +
-    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    geom_histogram(fill="dodgerblue3", color="white") +
     xlab("Sample mean price per night ($)")
 
 sampling_dist <- sampling_dist +
@@ -664,7 +664,7 @@ boot1_dist <- boot1_dist + ggtitle("Samples with Replacement") +
         axis.text.y = element_blank())
         
 boot2_dist <- ggplot(boot2, aes(price)) + 
-    geom_histogram(fill="#0072B2", color="#e9ecef") + 
+    geom_histogram(fill="dodgerblue3", color="white") + 
   theme(axis.title.x = element_blank(),
         axis.ticks.x = element_blank(),
         axis.text.x = element_blank(), 
@@ -673,7 +673,7 @@ boot2_dist <- ggplot(boot2, aes(price)) +
         axis.text.y = element_blank())
 
 boot3_dist <- ggplot(boot3, aes(price)) + 
-    geom_histogram(fill="#0072B2", color="#e9ecef") + xlab("Price") +
+    geom_histogram(fill="dodgerblue3", color="white") + xlab("Price") +
   theme(axis.ticks.x = element_blank(),
         axis.text.x = element_blank(), 
         axis.title.y =element_blank(), 
