--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -68,8 +68,10 @@ randomly selected 100 undergraduate students across North America (the sample) a
 students who own an iPhone (the sample statistic), we might suspect that that proportion is a reasonable
 estimate of the proportion of students who own an iPhone in the entire population. 
 
-<center>
-![Figure 11.1: Population versus sample](img/population_vs_sample.svg){}
+```{r 11-population-vs-sample, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Population versus sample", fig.retina = 2}
+knitr::include_graphics("img/population_vs_sample.svg")
+```
+
 </center>
 
 Note that proportions are not the *only* kind of population parameter we might be interested in. Suppose an undergraduate student studying at the University of British Columbia in Vancouver, BC is looking for an apartment to rent. They need to create a budget, so they want to know something about studio apartment rental prices in Vancouver, BC. This student might use statistical inference to tackle the question:
@@ -89,7 +91,9 @@ Let's start with an illustrative (and tasty!) example. Timbits are
 bite-sized doughnuts sold at Tim Hortons, a popular Canadian-based fast-food restaurant
 chain founded in Hamilton, Ontario, Canada. 
 
-![Timbits. Source: wikimedia.org](https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Timbits2.jpg/1600px-Timbits2.jpg){width=50%} 
+```{r 11-timbits-picture, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Timbits. Source: wikimedia.org", fig.retina = 2, out.width = "50%"}
+knitr::include_graphics("https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Timbits2.jpg/1600px-Timbits2.jpg")
+```
 
 
 Suppose we wanted to estimate the true proportion of chocolate doughnuts at Tim
@@ -166,17 +170,17 @@ called a **sampling distribution**. The sampling distribution will help us see
 how much we would expect our sample proportions from this population to vary
 for samples of size 40. Below we again use the `rep_sample_n` to take samples
 of size 40 from our population of Timbits, but we set the `reps` argument
-to specify the number of samples to take, here 1000.
+to specify the number of samples to take, here 15,000.
 
 ```{r 11-example-proportions5, echo = TRUE, message = FALSE, warning = FALSE}
-samples <- rep_sample_n(virtual_box, size = 40, reps = 1000)
+samples <- rep_sample_n(virtual_box, size = 40, reps = 15000)
 head(samples)
 tail(samples)
 ```
 
 Notice the column `replicate` is indicating the replicate, or sample, with which each
-Timbit belongs. Since we took 1000 samples of size 40, there are 1000 replicates.
-Now that we have taken 1000 samples, to create a sampling distribution of sample proportions for samples of size 40, we need to calculate the proportion of chocolate Timbits for each sample, $\hat{p}_\text{chocolate}$:
+Timbit belongs. Since we took 15,000 samples of size 40, there are 15,000 replicates.
+Now that we have taken 15,000 samples, to create a sampling distribution of sample proportions for samples of size 40, we need to calculate the proportion of chocolate Timbits for each sample, $\hat{p}_\text{chocolate}$:
 ```{r 11-example-proportions6, echo = TRUE, message = FALSE, warning = FALSE}
 sample_estimates <- samples %>% 
     group_by(replicate) %>% 
@@ -187,7 +191,7 @@ tail(sample_estimates)
 Now that we have calculated the proportion of chocolate Timbits for each sample, $\hat{p}_\text{chocolate}$, we can visualize the sampling distribution of sample proportions for samples of size 40:
 ```{r 11-example-proportions7, echo = TRUE, message = FALSE, warning = FALSE,fig.cap = "Sampling distribution of the sample proportion for sample size 40"}
 sampling_distribution <-  ggplot(sample_estimates, aes(x = sample_proportion)) +
-    geom_histogram(fill="dodgerblue3", color="white", bins = 12) +
+    geom_histogram(fill="dodgerblue3", color="lightgrey", bins = 12) +
     xlab("Sample proportions") 
 sampling_distribution
 ```
@@ -196,16 +200,14 @@ The sampling distribution appears to be bell-shaped with one peak. It is
 centered around `r round(mean(sample_estimates$sample_proportion),1)` and the
 sample proportions range from about `r round(min(sample_estimates$sample_proportion), 1)` to 
 about `r round(max(sample_estimates$sample_proportion), 1)`. In fact, we can calculate
-the mean and standard deviation of the sample proportions. 
+the mean of the sample proportions. 
 
 ```{r 11-example-proportions8, echo = TRUE, message = FALSE, warning = FALSE}
 sample_estimates %>% 
-  summarise(mean = mean(sample_proportion), sd = sd(sample_proportion))
+  summarise(mean = mean(sample_proportion))
 ```
 
-We notice that the sample proportions are centred around the population
-proportion value. The standard deviation of the sample proportions 
-is `r round(sd(sample_estimates$sample_proportion), 3)`.
+We notice that the sample proportions are centred around the population proportion value, `r round(mean(sample_estimates$sample_proportion), 2)`! In general, if we take repeated random samples from the population, we expect all the sample proportions to average out to the population proportion. This means that the sample proportion is neither an overestimate or an underestimate of the population proportion. This distribution tells us what we might expect from proportions from samples of size $40$ when our population proportion is 0.63. If we can somehow learn what sampling distributions look like, we can use this knowledge to make statistical inference about our population parameter when we are in the more common, and realistic scenario of only having a single sample and not knowing the population proportion. 
 
 <!--- > **Note:** If random samples of size $n$ are taken from a population, $\hat{p}$ will be approximately Normal with mean $p$ and standard deviation $\sqrt{\frac{p(1-p)}{n}}$ as long as the sample size $n$ is large enough such that $np$ and $n(1 - p)$ are at least 10, where $p$ is the population proportion, $\hat{p}$ is the sample proportion and $n$ is the sample size. 
 --->
@@ -242,7 +244,7 @@ head(airbnb)
 We can visualize the population distribution of the price per night with a histogram. 
 ```{r 11-example-means2, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Population distribution of price per night ($) for all Airbnb listings in Vancouver, Canada"}
 population_distribution <-  ggplot(airbnb, aes(x = price)) +
-    geom_histogram(fill="dodgerblue3", color="white") +
+    geom_histogram(fill="dodgerblue3", color="lightgrey") +
     xlab("Price per night ($)") 
 population_distribution
 population_parameters <- airbnb %>% 
@@ -267,7 +269,7 @@ sample_1 <- airbnb %>%
     rep_sample_n(20)
 head(sample_1)
 sample_distribution <- ggplot(sample_1, aes(price)) + 
-    geom_histogram(fill="dodgerblue3", color="white") +
+    geom_histogram(fill="dodgerblue3", color="lightgrey") +
     xlab("Price per night ($)") 
 sample_distribution
 estimates <- sample_1 %>% 
@@ -298,7 +300,7 @@ sample_estimates <- samples %>%
 head(sample_estimates)
 
 sampling_distribution_20 <-  ggplot(sample_estimates, aes(x = sample_mean)) +
-    geom_histogram(fill="dodgerblue3", color="white") + 
+    geom_histogram(fill="dodgerblue3", color="lightgrey") + 
     xlab("Sample mean price per night ($)") 
 sampling_distribution_20
 ```
@@ -351,19 +353,19 @@ sample_estimates_500 <- rep_sample_n(airbnb, size = 500, reps = 10000) %>%
 
 ## Sampling distribution n = 50 
 sampling_distribution_50 <-  ggplot(sample_estimates_50, aes(x = sample_mean)) +
-    geom_histogram(fill="dodgerblue3", color="white") +
+    geom_histogram(fill="dodgerblue3", color="lightgrey") +
     xlab("Sample mean price per night($)") +
     ggtitle("n = 50") + xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 
 ## Sampling distribution n = 100 
 sampling_distribution_100 <-  ggplot(sample_estimates_100, aes(x = sample_mean)) +
-    geom_histogram(fill="dodgerblue3", color="white") +
+    geom_histogram(fill="dodgerblue3", color="lightgrey") +
     xlab("Sample mean price per night ($)") +
     ggtitle("n = 100") + xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 
 ## Sampling distribution n = 500 
 sampling_distribution_500 <-  ggplot(sample_estimates_500, aes(x = sample_mean)) +
-    geom_histogram(fill="dodgerblue3", color="white") +
+    geom_histogram(fill="dodgerblue3", color="lightgrey") +
     xlab("Sample mean price per night ($)") +
     ggtitle("n = 500") + xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 
@@ -447,29 +449,29 @@ Here is the key idea. First, if you take a big enough sample, it *looks like* th
 sample_10 <- airbnb %>% 
     rep_sample_n(10)
 sample_distribution_10 <- ggplot(sample_10, aes(price)) + 
-    geom_histogram(fill="dodgerblue3", color="white") +
+    geom_histogram(fill="dodgerblue3", color="lightgrey") +
     xlab("Price per night ($)") + ggtitle("n = 10")
 
 sample_20 <- airbnb %>% 
     rep_sample_n(20)
 sample_distribution_20 <- ggplot(sample_20, aes(price)) + 
-    geom_histogram(fill="dodgerblue3", color="white") +
+    geom_histogram(fill="dodgerblue3", color="lightgrey") +
     xlab("Price per night ($)") + ggtitle("n = 20")
 sample_50 <- airbnb %>% 
     rep_sample_n(50)
 sample_distribution_50 <- ggplot(sample_50, aes(price)) + 
-    geom_histogram(fill="dodgerblue3", color="white") +
+    geom_histogram(fill="dodgerblue3", color="lightgrey") +
     xlab("Price per night ($)") + ggtitle("n = 50")
 sample_100 <- airbnb %>% 
     rep_sample_n(100)
 sample_distribution_100 <- ggplot(sample_100, aes(price)) + 
-    geom_histogram(fill="dodgerblue3", color="white") +
+    geom_histogram(fill="dodgerblue3", color="lightgrey") +
     xlab("Price per night ($)") + ggtitle("n = 100")
 
 sample_200 <- airbnb %>% 
     rep_sample_n(200)
 sample_distribution_200 <- ggplot(sample_200, aes(price)) + 
-    geom_histogram(fill="dodgerblue3", color="white") +
+    geom_histogram(fill="dodgerblue3", color="lightgrey") +
     xlab("Price per night ($)") + ggtitle("n = 200")
 
 grid.arrange(sample_distribution_10, 
@@ -520,7 +522,7 @@ one_sample <- airbnb %>%
     select(price) # drop the replicate column 
 head(one_sample)
 one_sample_dist <- ggplot(one_sample, aes(price)) + 
-    geom_histogram(fill="dodgerblue3", color="white") +
+    geom_histogram(fill="dodgerblue3", color="lightgrey") +
     xlab("Price per night ($)") 
 one_sample_dist
 ```
@@ -547,7 +549,7 @@ boot1 <- one_sample %>%
     rep_sample_n(size = 40, replace = TRUE, reps = 1)
 head(boot1)
 boot1_dist <- ggplot(boot1, aes(price)) + 
-    geom_histogram(fill="dodgerblue3", color="white") +
+    geom_histogram(fill="dodgerblue3", color="lightgrey") +
     xlab("Price per night ($)") 
 
 boot1_dist
@@ -587,7 +589,7 @@ might expect our point estimate to behave if we took another sample.
 
 ```{r 11-bootstrapping5, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means"}
 boot_est_dist <-  ggplot(boot1500_means, aes(x = mean)) +
-    geom_histogram(fill="dodgerblue3", color="white") +
+    geom_histogram(fill="dodgerblue3", color="lightgrey") +
     xlab("Sample mean price per night ($)") 
 ```
 
@@ -602,7 +604,7 @@ sample_estimates <- samples %>%
     summarise(sample_mean = mean(price))
 
 sampling_dist <-  ggplot(sample_estimates, aes(x = sample_mean)) +
-    geom_histogram(fill="dodgerblue3", color="white") +
+    geom_histogram(fill="dodgerblue3", color="lightgrey") +
     xlab("Sample mean price per night ($)")
 
 sampling_dist <- sampling_dist +
@@ -664,7 +666,7 @@ boot1_dist <- boot1_dist + ggtitle("Samples with Replacement") +
         axis.text.y = element_blank())
         
 boot2_dist <- ggplot(boot2, aes(price)) + 
-    geom_histogram(fill="dodgerblue3", color="white") + 
+    geom_histogram(fill="dodgerblue3", color="lightgrey") + 
   theme(axis.title.x = element_blank(),
         axis.ticks.x = element_blank(),
         axis.text.x = element_blank(), 
@@ -673,7 +675,7 @@ boot2_dist <- ggplot(boot2, aes(price)) +
         axis.text.y = element_blank())
 
 boot3_dist <- ggplot(boot3, aes(price)) + 
-    geom_histogram(fill="dodgerblue3", color="white") + xlab("Price") +
+    geom_histogram(fill="dodgerblue3", color="lightgrey") + xlab("Price") +
   theme(axis.ticks.x = element_blank(),
         axis.text.x = element_blank(), 
         axis.title.y =element_blank(), 
