--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -209,7 +209,7 @@ sample_estimates %>%
 
 We notice that the sample proportions are centred around the population proportion value, `r round(mean(sample_estimates$sample_proportion), 2)`! In general, the mean of the distribution of $\hat{p}$ should be equal to $p$, which is good because the sample proportion is neither an overestimate nor an underestimate of the population proportion.
 
-So what can we learn from this sampling distribution? This distribution tells us what we might expect from proportions from samples of size $40$ when our population proportion is 0.63. If we can somehow learn what the sampling distribution looks like, we can use it to make inferences about our population when only having a single sample.  
+So what can we learn from this sampling distribution? This distribution tells us what we might expect from proportions from samples of size $40$ when our population proportion is 0.63. In practice, we usually don't actually know the proportion of our population, but if we can use what we know about what the sampling distribution looks like when we do then we can use it to make inferences about our population when only having a single sample. 
 
 <!--- > **Note:** If random samples of size $n$ are taken from a population, $\hat{p}$ will be approximately Normal with mean $p$ and standard deviation $\sqrt{\frac{p(1-p)}{n}}$ as long as the sample size $n$ is large enough such that $np$ and $n(1 - p)$ are at least 10, where $p$ is the population proportion, $\hat{p}$ is the sample proportion and $n$ is the sample size. 
 --->
@@ -257,9 +257,9 @@ create a histogram to visualize the
 distribution of observations in the sample,
 and calculate the mean of our sample. This number is a **point estimate** for the mean of the full population.
 
-```{r 11-example-means3, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of price per night ($) for sample of 20 Airbnb listings", out.width = "50%"}
+```{r 11-example-means3, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of price per night ($) for sample of 40 Airbnb listings", out.width = "50%"}
 sample_1 <- airbnb %>% 
-    rep_sample_n(20)
+    rep_sample_n(40)
 head(sample_1)
 sample_distribution <- ggplot(sample_1, aes(price)) + 
     geom_histogram(fill="dodgerblue3", color="lightgrey") +
@@ -279,12 +279,12 @@ parameter; if we did, we wouldn't need to estimate it!
 Also recall from the previous section that the point estimate can vary; if 
 we took another random sample from the population, then the value of our statistic may change.
 So then did we just get lucky with our point estimate above?
-How much does our estimate vary across different samples of size 20 in this example? Again, since we have access to the population,
-we can take many samples and plot the **sampling distribution** of sample means for samples of size 20 to get a sense
-for this variation. In this case, we'll use 1500 samples of size 20.
+How much does our estimate vary across different samples of size 40 in this example? Again, since we have access to the population,
+we can take many samples and plot the **sampling distribution** of sample means for samples of size 40 to get a sense
+for this variation. In this case, we'll use 15,000 samples of size 40.
 
-```{r 11-example-means4, echo = TRUE, message = FALSE, warning = FALSE, fig.cap= "Sampling distribution of the sample means for sample size of 20"}
-samples <- rep_sample_n(airbnb, size = 20, reps = 1500)
+```{r 11-example-means4, echo = TRUE, message = FALSE, warning = FALSE, fig.cap= "Sampling distribution of the sample means for sample size of 40"}
+samples <- rep_sample_n(airbnb, size = 40, reps = 15000)
 head(samples)
 
 sample_estimates <- samples %>% 
@@ -292,10 +292,10 @@ sample_estimates <- samples %>%
     summarise(sample_mean = mean(price))
 head(sample_estimates)
 
-sampling_distribution_20 <-  ggplot(sample_estimates, aes(x = sample_mean)) +
+sampling_distribution_40 <-  ggplot(sample_estimates, aes(x = sample_mean)) +
     geom_histogram(fill="dodgerblue3", color="lightgrey") + 
     xlab("Sample mean price per night ($)") 
-sampling_distribution_20
+sampling_distribution_40
 ```
 
 Here we see that the sampling distribution of the mean has one peak and is
@@ -321,28 +321,39 @@ was \$`r round(mean(airbnb$price),2)`.
 ```{r 11-example-means5, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparision of population distribution, sample distribution and sampling distribution"}
 grid.arrange(population_distribution + ggtitle("Population distribution"), 
              sample_distribution + ggtitle("Sample"), 
-             sampling_distribution_20 + ggtitle("Sampling distribution of the sample mean"), nrow = 3)
+             sampling_distribution_40 + ggtitle("Sampling distribution of the sample mean"), nrow = 3)
 ```
 
 Given that there is quite a bit of variation in the sampling distribution of the sample mean&mdash;i.e., 
 the point estimate that we obtain is not very reliable&mdash;is there any way to improve the estimate?
 One way to improve a point estimate is to take a *larger* sample. To illustrate what effect this has,
-we will take 1500 samples of size 20, 50, 100, and 500, and plot the sampling distribution of the sample mean
+we will take many samples of size 20, 50, 100, and 500, and plot the sampling distribution of the sample mean
 below. 
 
 ```{r 11-example-means6, echo = FALSE, message = FALSE, warning = FALSE}
-## Sampling n = 50, 100, 500 
-sample_estimates_50 <- rep_sample_n(airbnb, size = 50, reps = 1500) %>% 
+## Sampling n = 20, 50, 100, 500 
+sample_estimates_20 <- rep_sample_n(airbnb, size = 20, reps = 15000) %>% 
     group_by(replicate) %>% 
     summarise(sample_mean = mean(price))
 
-sample_estimates_100 <- rep_sample_n(airbnb, size = 100, reps = 1500) %>% 
+sample_estimates_50 <- rep_sample_n(airbnb, size = 50, reps = 15000) %>% 
     group_by(replicate) %>% 
     summarise(sample_mean = mean(price))
 
-sample_estimates_500 <- rep_sample_n(airbnb, size = 500, reps = 10000) %>% 
+sample_estimates_100 <- rep_sample_n(airbnb, size = 100, reps = 15000) %>% 
     group_by(replicate) %>% 
     summarise(sample_mean = mean(price))
+
+sample_estimates_500 <- rep_sample_n(airbnb, size = 500, reps = 15000) %>% 
+    group_by(replicate) %>% 
+    summarise(sample_mean = mean(price))
+
+## Sampling distribution n = 20 
+sampling_distribution_20 <-  ggplot(sample_estimates_20, aes(x = sample_mean)) +
+    geom_histogram(fill="dodgerblue3", color="lightgrey") +
+    xlab("Sample mean price per night($)") +
+    ggtitle("n = 20") 
+sampling_distribution_20  <- sampling_distribution_20  + xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 
 ## Sampling distribution n = 50 
 sampling_distribution_50 <-  ggplot(sample_estimates_50, aes(x = sample_mean)) +
