--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -516,8 +516,11 @@ For a sample of size $n$, the process we will go through is as follows:
 ### Bootstrapping in R 
 Let's continue working with our Airbnb data. Once again,  let's say we are interested
 in estimating the population mean price per night of all Airbnb listings in
-Vancouver, Canada. We will draw a single sample of size 40 from the
-population and visualize the distribution of the sample:
+Vancouver, Canada from a single sample we collected of size 40. 
+
+To simulate doing this in R, we will use `rep_sample_n` to take a random sample from from our population. In real life we wouldn't do this step in R, we would instead simply load the data into R, that we, or our collaborators collected.
+
+After we have our sample, we will  visualize it's distribution and calculate our point estimate, the sample mean.
 
 ```{r 11-bootstrapping1, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Histogram of price per night ($) for one sample of size 40"}
 one_sample <- airbnb %>% 
